# trapezia-document-reader

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/superpowers/plans/: 2026-06-18-reconcile-salus-columnar-into-lib.md  2026-06-18-trapezia-document-reader.md
docs/superpowers/specs/: 2026-06-18-reconcile-salus-columnar-into-lib.md  2026-06-18-trapezia-document-reader-design.md
src/trapezia_document_reader/: __init__.py  columnar.py  errors.py  isolation.py  ocr.py  pages.py  reader.py  render.py  scan.py  tables.py
tests/: conftest.py  test_column_bands.py  test_columnar.py  test_errors.py  test_isolation.py  test_ocr.py  test_pages.py  test_parse_date_tz.py  test_public_api.py  test_reader.py  test_render.py  test_scan.py  test_tables_columnar.py  test_tables_ruled.py
tests/fixtures/: build_fixtures.py
