[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trapezia-document-reader"
version = "0.1.0"
description = "Clinical-agnostic PDF read + OCR primitives for the Trapezia platform"
authors = [{name = "Trapezia LLC"}]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["pdfplumber>=0.11,<1.0"]

[project.optional-dependencies]
ocr = ["ocrmypdf>=16,<17"]
dev = ["pytest>=8", "reportlab>=4", "pillow>=10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
